--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 
 <body>
     <div class="container">
-        <header>Star Geek</header>
+        <header><img src="imagens/Captura de tela 2023-03-28 163221.png"></header>
         <nav>
-            <i class="bi bi-list"></i>
+            <div>
+                <form action="http://127.0.0.1:5500/menu.html">
+                    <input type="submit" style="width: 60px; height: 40px;" value="Menu">
+                </form>
+            </div>
         </nav>
         <main>
             <p style="font-size: 500%;">Seja bem-vindo!</p>
-            <h5 style="font-size: 150%;">Confira nosso catálogo em cartaz!</h5>
+            <h4 style="font-size: 150%;">Confira nosso catálogo em cartaz!</h4>
 
             <div class="imagens">
                 <div class="imagem">
@@ -37,9 +41,9 @@
         </main>
         <footer>
             <div class="icones">
-                    <i class="bi bi-whatsapp"></i>
-                    <i class="bi bi-facebook"></i>
-                    <i class="bi bi-instagram"></i>
+                <i class="bi bi-whatsapp"></i>
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-instagram"></i>
             </div>
         </footer>
     </div>
