--- a/cadastro.html
+++ b/cadastro.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Cadastro</title>
+    <link rel="website icon" type="png" href="/imagens/Captura de tela 2023-04-17 074607.png">
     <link rel="stylesheet" href="cadastro.css">
 </head>
 
@@ -21,7 +22,7 @@
         </nav>
 
         <main>
-            <form>
+            <form action="index.html">
                 <label class="email">Digite aqui seu melhor E-mail:</label>
                 <input type="email" value="" placeholder="Digite aqui seu E-mail...">
                 <label class="senha">Digite aqui uma Senha:</label>
@@ -30,11 +31,12 @@
                 <input type="checkbox" value="">
                 <label>Eu li e concordo com os <label class="termos"> Termos de Uso </label> e com a <label class="politica"> Política de Privacidade </label> </label>
             </div>
+            <input type="submit" value="Cadastrar">
             </form>
         </main>
 
         <footer>
-            <a href="login.html">Já possui uma conta? Acesse agora !</a>
+            <a href="login.html" class="logar">Já possui uma conta? Acesse agora !</a>
         </footer>
 
     </div>
