--- a/catalogo.html
+++ b/catalogo.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Login</title>
+    <title>Meu Catálogo</title>
     <link rel="website icon" type="png" href="/imagens/Captura de tela 2023-04-17 074607.png">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="catalogo.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
 <body>
     <div class="container">
-        <header><img src="imagens/unnamed.png"></header>
-
+        <header><img src="imagens/Captura de tela 2023-03-28 163221.png"></header>
         <nav>
             <div>
                 <form action="http://127.0.0.1:5500/menu.html">
@@ -23,21 +23,23 @@
         </nav>
 
         <main>
-            <form action="index.html">
-                <label>Digite seu E-mail:</label>
-                <input type="email" value="" placeholder="Digite aqui o seu E-mail...">
-                <label>Digite sua Senha:</label>
-                <input type="password" placeholder="Digite aqui a sua senha...">
-                <input type="submit" value="Entrar">
-            </form>
+            <div class="imagens">
+                <img class="img1" src="/imagens/4239577.jpg">
+
+                <img class="img2" src="/imagens/Grey's_Anatomy_temporada_17_poster.jpg">
+
+                <img class="img3" src="/imagens/81h0Sl+VPZL._AC_SX466_.jpg">
+
+                <img class="img4" src="/imagens/71HGgigujnL._AC_SL1500_.jpg">
+            </div>
         </main>
 
         <footer>
-            <a href="cadastro.html" class="cadastrar">Ainda não possui uma conta? Cadastre-se agora!</a>
-            <a class="senha">Esqueceu sua Senha? Clique Aqui!</a> 
+            <div class="icones">
+                <i class="bi bi-whatsapp"></i>
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-instagram"></i>
+            </div>
         </footer>
-        
-    </div>
 </body>
-
 </html>
