--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+    <link rel="website icon" type="png" href="/imagens/Captura de tela 2023-04-17 074607.png">
     <link rel="stylesheet" href="menu.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
@@ -25,9 +26,12 @@
                 <a href="cadastro.html">
                     <input type="button" style="width: 200px; height: 70px;" value="Cadastre-se">
                 </a>
+                <a href="catalogo.html">
                     <input type="button" style="width: 200px; height: 70px;" value="Meu Catálogo">
+                </a>
+                <a href="cadastroitem.html">
                     <input type="button" style="width: 200px; height: 70px;" value="Cadastrar item">
-                    <input type="button" style="width: 200px; height: 70px;" value="Sobre nós">
+                </a>
             </form>
         </main>
 
