--- a/cadastroitem.html
+++ b/cadastroitem.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastrar item no Catálogo</title>
+    <link rel="website icon" type="png" href="/imagens/Captura de tela 2023-04-17 074607.png">
     <link rel="stylesheet" href="cadastroitem.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
@@ -22,18 +23,22 @@
         </nav>
 
         <main>
-            <form>
+            <form action="catalogo.html">
                 <div>
                     <h2>Título do Conteúdo:</h2>
-                    <input class="titulo" type="text" value="">
+                    <input class="titulo" type="text" style="font-size: 20px;" value="">
                     <h2>Contexto do Conteúdo:</h2>
-                    <input class="contexto" type="text" value="">
-                    <input type="checkbox" value="PNG">
-                    <label>PNG</label>
-                    <input type="checkbox" value="MP3">
-                    <label>MP3</label>
-                    <input type="checkbox" value="MP4">
-                    <label>MP4</label>
+                    <textarea class="contexto" maxlength="250" rows="10" cols="35" style="font-size: 20px;"></textarea>
+                    <input type="radio" name="opcao" value="PNG">
+                    <h3>PNG</h3>
+                    <input type="radio" name="opcao" value="MP3">
+                    <h3>MP3</h3>
+                    <input type="radio" name="opcao" value="MP4">
+                    <h3>MP4</h3>
+                    <div class="botoes">
+                        <input type="reset" value="Limpar">
+                        <input type="submit" value="Enviar">
+                    </div>
                 </div>
             </form>
         </main>
