--- a/catalogo.html
+++ b/catalogo.html
@@ -24,14 +24,9 @@
 
         <main>
             <div class="imagens">
-                <img class="img1" src="/imagens/4239577.jpg">
-
-                <img class="img2" src="/imagens/Grey's_Anatomy_temporada_17_poster.jpg">
-
-                <img class="img3" src="/imagens/81h0Sl+VPZL._AC_SX466_.jpg">
-
-                <img class="img4" src="/imagens/71HGgigujnL._AC_SL1500_.jpg">
             </div>
+
+            <button id="btn">Cadastrar Item</button>
         </main>
 
         <footer>
@@ -41,5 +36,6 @@
                 <i class="bi bi-instagram"></i>
             </div>
         </footer>
+<script src="catalogo.js"></script>
 </body>
 </html>
